[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture2D" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture2D" id=2]
[ext_resource path="res://HitBoxes and HurtBoxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectonZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://HitBoxes and HurtBoxes/HitBox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"sprite_frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 5.0

[sub_resource type="CircleShape2D" id=9]
radius = 48.0

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource( 6 )
animation = "Fly"
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="PlayerDetectonZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectonZone" index="0"]
modulate = Color( 1, 1, 1, 0.262745 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetectonZone"]
[editable path="HitBox"]
